fix: allow overflow and add margins for all sizes
(cherry picked from commit c19137e4ce687a8cd136529d0eef9f7fc4cf83cb)

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,7 +11,11 @@
   left: 0;
   right: 0;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    min-height: 100%;
+  }
 }
