--- a/src/app/window/window.component.scss
+++ b/src/app/window/window.component.scss
@@ -4,10 +4,7 @@
 :host {
   display: block;
   max-width: calc(600px - #{margins.$m} - #{margins.$m});
-
-  @include breakpoints.xs {
-    margin: margins.$m;
-  }
+  margin: margins.$m;
 
   > * {
     border-style: solid;
